#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.67])
AC_INIT(blockbench, 0.1, elm@cs.ucsc.edu)
AC_CONFIG_SRCDIR([src/ioload/iol_main.c])
AC_CONFIG_HEADERS([config.h])

AC_PROG_MAKE_SET
AC_PROG_RANLIB

# Checks for programs.
AC_PROG_CC

# Checks for libraries.
# FIXME: Replace `main' with a function in `-liobench':
AC_CHECK_LIB([iobench], [iob_libinit])

# Checks for header files.
AC_CHECK_HEADERS([fcntl.h inttypes.h limits.h netinet/in.h stdint.h stdlib.h string.h sys/ioctl.h sys/param.h sys/time.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_SSIZE_T
AC_TYPE_UINT16_T
AC_TYPE_UINT32_T
AC_TYPE_UINT64_T
AC_TYPE_UINT8_T

# Checks for library functions.
AC_FUNC_MALLOC
AC_FUNC_MMAP
AC_FUNC_STRTOD
AC_CHECK_FUNCS([clock_gettime gethrtime memset strdup strerror strtoul strtoull])

AC_CONFIG_FILES([Makefile
                 lib/Makefile
                 src/iofill/Makefile
                 src/ioload/Makefile])
AC_OUTPUT
